# rovenue

./: .env.example  .env.test.example  .gitignore  .gitmodules  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  SECURITY_AUDIT.md  backend-consistency-audit.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  ci.yml.disabled  release-sdk.yml  sdk-swift-pod-lint.yml  sdk.yml
.superpowers/sdd/: progress.md
apps/api/: Dockerfile  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/dashboard/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/docs/: Dockerfile  README.md  package.json  source.config.ts
apps/landing/: .env.example  astro.config.mjs  package.json
deploy/: docker-compose.yml
deploy/alloy/: config.alloy
deploy/caddy/: Caddyfile  Caddyfile.dashboard  Caddyfile.docs
deploy/loki/: config.yaml
deploy/peerdb/: README.md  setup.sql
deploy/postgres/: Dockerfile  init.sql
deploy/prometheus/: prometheus.yml
docs-internal/: remote-config-sdk-plan.md
docs/architecture/: outbox-dispatcher.md
docs/operations/: deployment-rehberi.md  deployment.md  integrations-manual-qa.md  integrations-rollout.md
docs/runbooks/: notifications.md
docs/specs/: 2026-05-28-fraud-detection-strategy.md
docs/superpowers/: docs-style-guide.md  sdk-api-ground-truth.md
examples/sample-rn-expo/: .gitignore  App.tsx  (+6 more)
scripts/: package.json  rotate-encryption-key.ts  sdk-parity.sh
(+1704 files in other folders)
