[workspace]
resolver = "2"
members = ["packages/core-rs"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-only"
repository = "https://github.com/rovenue/rovenue"

[workspace.dependencies]
uniffi = { version = "0.25.3", features = ["cli"] }
thiserror = "1.0.61"
