[workspace]
resolver = "2"
members = ["packages/core-rs", "packages/core-rs/bindgen"]

[workspace.package]
version = "0.11.0"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-only"
repository = "https://github.com/rovenue/rovenue"

[workspace.dependencies]
uniffi = { version = "0.25.3" }
thiserror = "1.0.61"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cuid2 = "0.1"
rand = "0.8"

# dev-deps
mockito = "1.4"
tempfile = "3.10"
serial_test = "3"

